--- a/index.html
+++ b/index.html
@@ -7,14 +7,15 @@
 	<title>Coverfly</title>
 	<meta name="description" content="Find cool covers of your favorite songs!">
 	<meta name="author" content="Jimmy Farrell">
-	<link rel="stylesheet" href="bootstrap.min.css">
-	<link rel="stylesheet" href="styles.css">
+	<link rel="stylesheet" href="/css/bootstrap.min.css">
+	<link rel="stylesheet" href="/css/styles.css">
 </head>
 
 <body>
 	<div class="container">
 		<div id="search-bar">
-			<h1>So Many Covers, So Little Time</h1>
+			<h1>Coverfly</h1>
+			<h2>Search for Song Covers</h2>
 			<form action="/search" method="POST">
 				<label for="artist_field">Artist:</label>
 				<input name="artist" type="text" id="artist_field"/>
@@ -24,7 +25,7 @@
 			</form>
 		</div>
 		<div id="spotify-results" class="col-xs-4">
-			<h2 class="stream-service">Spotify</h2>
+			<h3 class="stream-service">Spotify</h3>
 
 			{% for track in spotifyResults %}
 			<div class="result spotify-track">
@@ -38,7 +39,7 @@
 
 		</div>
 		<div id="soundcloud-results" class="col-xs-4">
-			<h2 class="stream-service">SoundCloud</h2>
+			<h3 class="stream-service">SoundCloud</h3>
 
 			{% for track in soundcloudResults %}
 			<div class="result soundcloud-track">
@@ -48,7 +49,7 @@
 			
 		</div>
 		<div id="youtube-results" class="col-xs-4">
-			<h2 class="stream-service">YouTube</h2>
+			<h3 class="stream-service">YouTube</h3>
 
 			{% for video in youtubeResults %}
 					<div class="result soundcloud-track">
@@ -58,6 +59,6 @@
 
 		</div>
 	</div>
-	<script src="bootstrap.min.js"></script>
+	<script src="/js/bootstrap.min.js"></script>
 </body>
 </html>
